Fix: Animation just once, responsive div on mobile

--- a/src/components/AboutMe/styles.scss
+++ b/src/components/AboutMe/styles.scss
@@ -31,7 +31,8 @@
     @media (max-width: 900px) {
       display: flex;
       flex-direction: column;
-      height: 900px;
+      height: 600px;
+      width: 80%;
     }
 
     .AboutMePicture {
@@ -43,7 +44,7 @@
       width: 50%;
 
       @media (max-width: 900px) {
-        height: 50%;
+        height: 40%;
         width: 100%;
       }
     }
@@ -59,6 +60,8 @@
       @media (max-width: 900px) {
         width: 100%;
         gap: 60px;
+        height: 30%;
+        margin-top: 70px;
       }
 
       h1 {
