--- a/src/components/Projects/styles.scss
+++ b/src/components/Projects/styles.scss
@@ -28,6 +28,10 @@
       font-weight: lighter;
       width: 40%;
       text-align: center;
+
+      @media(max-width: 500px){
+        width: 90%;
+      }
     }
   }
 }
